refactor(core+mc): 重构物品渲染系统并优化样式解析
- 移除 ApricityContainerScreen 中的旧版槽位渲染逻辑
- 实现统一的 ItemRender 系统用于处理绑定和未绑定槽位物品渲染
- 添加 SlotItemRenderRequest 记录类管理渲染请求
- 优化 CSS 解析器支持跨行选择器解析
- 改进元素类名解析逻辑去除重复和空白类名
- 更新全局 CSS 配方网格布局样式配置
- 实现槽位物品渲染的裁剪区域计算和缩放变换
- 重构配方扩展器中的槽位类名生成方法